--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "main": "server.ts",
     "scripts": {
-        "dev": "npx ts-node-dev --require dotenv/config server.ts"
+        "dev": "npx ts-node-dev server.ts"
     },
     "keywords": [],
     "description": "",
